language/move-lang/tests/move_check/parser/struct_native_resource.exp
error: 

   ┌── tests/move_check/parser/struct_native_resource.move:3:14 ───
   │
 3 │     resource native struct S;
   │              ^^^^^^ Unexpected token: 'native'
   ·
 3 │     resource native struct S;
   │              ------ Expected: 'struct'
   │

